# Argus_Testing_Folder

./: README.md
09_camera_jpeg_capture/: CMakeLists.txt  Makefile  captureJPEG
09_camera_jpeg_capture_with_OpenCV/: captureJPEG  main.cpp
Debugging Testing/: Makefile  debuggingTesting
captureJPEG/: Makefile  captureJPEG  main.cpp  patch.txt
oneShot/: CMakeLists.txt  main.cpp
